# fruit-fly-net

./: README.md  setup.cfg  setup.py
demo/: Fruit_Fly_Net_demo_🍄.ipynb  dex.csv
src/fruit_fly_net/: __init__.py  fruit_fly_net.py
